# News-Digest

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  main.py
app/core/: config.py
app/db/: init_db.py  models.py  session.py
app/services/: cluster_service.py  deduplicator.py  demo_loader.py  normalizer.py  rss_fetcher.py  seed_sources.py  settings_service.py  source_candidate_schema.py  source_candidates.py  source_catalog.json  source_catalog.py  source_filters.py  stats_service.py
app/web/: routes.py  source_routes.py
app/web/static/: styles.css
app/web/templates/: base.html  cluster_detail.html  dashboard.html  feed.html  fetch_run_detail.html  fetch_runs.html  review.html  settings.html  sources.html
app/web/templates/partials/: source_filters.html  source_flash.html  source_row.html  source_summary.html  source_table.html  source_workspace.html
docs/: architecture.md  source_wishlist.md
fixtures/: demo_articles.json
tests/: test_deduplicator.py  test_normalizer.py  test_poc_diagnostics.py  test_rss_discovery.py  test_source_candidates.py  test_source_workflow.py
